Primer commit del proyecto AppCRUD

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,45 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <!-- SearchView para buscar contactos -->
+    <SearchView
+        android:id="@+id/txtBuscar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_margin="10dp"
+        android:queryHint="Buscar contacto"
+        android:background="@drawable/searchview_background" />
 
-        <SearchView
-            android:id="@+id/txtBuscar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+    <!-- RecyclerView para mostrar la lista de contactos -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listaContactos"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@id/txtBuscar"
+        android:layout_above="@id/favNuevo"
+        android:layout_margin="10dp"
+        android:layout_weight="1" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/listaContactos"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight=".90" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/favNuevo"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_gravity="bottom|end"
-            android:layout_marginRight="10dp"
-            android:layout_weight=".1"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/ic_add"
-            app:backgroundTint="@color/design_default_color_primary" />
-    </LinearLayout>
-</LinearLayout>
+    <!-- Botón flotante para añadir nuevo contacto con más estilo -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/favNuevo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/ic_add"
+        app:backgroundTint="@color/design_default_color_primary"
+        app:fabSize="normal"
+        app:rippleColor="@color/design_default_color_on_primary"
+        app:elevation="6dp"
+        app:borderWidth="0dp"
+        android:scaleType="centerInside"
+        android:contentDescription="Añadir nuevo contacto" />
+</RelativeLayout>
