--- a/app/src/main/res/layout/lista_item_contacto.xml
+++ b/app/src/main/res/layout/lista_item_contacto.xml
@@ -3,77 +3,76 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:padding="8dp"
+    android:background="#F5F5F5">
 
+    <!-- Imagen de contacto -->
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginEnd="10dp"
+        android:padding="2dp"
+        app:srcCompat="@drawable/ic_contacto"
+        tools:srcCompat="@drawable/ic_contacto"
+        android:contentDescription="Foto de contacto" />
+
+    <!-- Contenedor de la información de contacto -->
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:layout_toEndOf="@id/imageView"
+        android:layout_alignParentTop="true">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".1"
-            android:padding="2dp"
-            app:srcCompat="@drawable/ic_contacto"
-            tools:srcCompat="@drawable/ic_contacto" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <!-- Nombre del contacto -->
+        <TextView
+            android:id="@+id/viewNombre"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="1"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <!-- Contenedor de los detalles: Teléfono, Correo, Dirección, Deuda -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="3dp">
+            android:layout_marginTop="4dp">
 
+            <!-- Teléfono -->
             <TextView
-                android:id="@+id/viewNombre"
-                android:layout_width="match_parent"
+                android:id="@+id/viewTelefono"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_weight="1"
-                android:textColor="#000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="16sp"
+                android:paddingBottom="2dp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <!-- Correo -->
+            <TextView
+                android:id="@+id/viewCorreo"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:textSize="16sp"
+                android:paddingBottom="2dp" />
 
-                <TextView
-                    android:id="@+id/viewTelefono"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:paddingRight="5dp"
-                    android:textSize="16sp" />
+            <!-- Dirección -->
+            <TextView
+                android:id="@+id/viewDireccion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:paddingBottom="2dp" />
 
-                <TextView
-                    android:id="@+id/viewCorreo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="left"
-                    android:paddingLeft="8dp"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/viewDireccion"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="left"
-                    android:paddingLeft="8dp"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/viewDeuda"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="left"
-                    android:paddingLeft="8dp"
-                    android:textSize="16sp" />
-            </LinearLayout>
+            <!-- Deuda -->
+            <TextView
+                android:id="@+id/viewDeuda"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:paddingBottom="2dp" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
