--- a/app/src/main/res/menu/menu_principal.xml
+++ b/app/src/main/res/menu/menu_principal.xml
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!-- Opción de menú para crear un nuevo registro -->
     <item
-    android:id="@+id/menuNuevo"
-    android:title="@string/menu_nuevo" />
+        android:id="@+id/menuNuevo"
+        android:title="@string/menu_nuevo"
+        android:icon="@drawable/ic_add"
+        app:showAsAction="always"
+        android:contentDescription="@string/menu_nuevo" />
 </menu>
