--- a/app/src/main/res/values/ic_launcher_background.xml
+++ b/app/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#FFFFFF</color>
+    <!-- Color de fondo del icono, azul claro para armonizar con el color principal -->
+    <color name="ic_launcher_background">#E1F5FE</color> <!-- Azul claro -->
 </resources>
